Change UI- Create Grid

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
       <h1 class="game-title">ETCH-A-SKETCH</h1>
     </header>
     <main id="game-container">
-      <div class="grid-window" id="grid"></div>
+      <div class="grid-window" id="grid-container"></div>
       <div class="etch-a-sketch-controls">
-        <button class="etch-a-sketch-clear-btn">Clear</button>
+        <button class="etch-a-sketch-clear-btn" id="clear">CLEAR</button>
       </div>
     </main>
   </div>
