Size Buttons Added

--- a/index.html
+++ b/index.html
@@ -19,7 +19,13 @@
     <main id="game-container">
       <div class="grid-window" id="grid-container"></div>
       <div class="etch-a-sketch-controls">
-        <button class="etch-a-sketch-clear-btn" id="clear">CLEAR</button>
+        <div class="size-btns-container">
+          <button class="small-grid size-btn ctrl-btns" id="small-grid">SMALL</button>
+          <button class="med-grid size-btn ctrl-btns" id="med-grid">MEDIUM</button>
+          <button class="big-grid size-btn ctrl-btns" id="big-grid">BIG</button>
+        </div>
+        <button class="clear-btn ctrl-btns" id="clear">CLEAR</button>
+
       </div>
     </main>
   </div>
