Small Grid Button Done

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="etch-a-sketch-controls">
         <div class="size-btns-container">
           <button class="small-grid size-btn ctrl-btns" id="small-grid">SMALL</button>
-          <button class="med-grid size-btn ctrl-btns" id="med-grid">MEDIUM</button>
+          <button class="med-grid size-btn ctrl-btns" id="medium-grid">MEDIUM</button>
           <button class="big-grid size-btn ctrl-btns" id="big-grid">BIG</button>
         </div>
         <button class="clear-btn ctrl-btns" id="clear">CLEAR</button>
