All Buttons Done

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="size-btns-container">
           <button class="small-grid size-btn ctrl-btns" id="small-grid">SMALL</button>
           <button class="med-grid size-btn ctrl-btns" id="medium-grid">MEDIUM</button>
-          <button class="big-grid size-btn ctrl-btns" id="big-grid">BIG</button>
+          <button class="large-grid size-btn ctrl-btns" id="large-grid">BIG</button>
         </div>
         <button class="clear-btn ctrl-btns" id="clear">CLEAR</button>
 
